# godimento-banca-ore

./: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  i18n.ts  main.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Button.tsx  Checkbox.tsx  Navbar.tsx
src/hooks/: useAppConfig.ts  useCompaniesFile.ts  useRecentFiles.ts  useUserConfig.ts
src/icons/: BaselineHistory.tsx  OutlineHome.tsx  OutlineInfo.tsx  OutlinePeople.tsx  OutlineSettings.tsx
src/layout/: Layout.tsx
src/locales/it/: translation.json
src/types/: AppConfig.ts  Azienda.ts  CompanyCSVEntry.ts  CompanyConfig.ts  Dipendente.ts  Movimento.ts  UserConfig.ts  XmlFile.ts
src/utils/: fileUtils.ts  xmlUtils.ts
src/views/: Companies.tsx  File.tsx  History.tsx  Home.tsx  Settings.tsx
t/: qwe.xml
